fixed animated-txt wrapping problem

--- a/src/components/animated-txt/animated-txt.scss
+++ b/src/components/animated-txt/animated-txt.scss
@@ -3,76 +3,108 @@
 @use '@/styles/animation.scss' as animation;
 
 .animated-txt {
+  @include layout.flex-row-center;
   position: relative;
   width: 100%;
   height: 100%;
   
-  &.flex-letters-start {
-    @include layout.flex-row-start;
-  }
-
-  &.flex-letters-center {
-    @include layout.flex-row-center;
-  }
-
-  &.flex-letters-evenly {
-    @include layout.flex-row-evenly;
-  }
-
   &.flex-wrap {
     flex-wrap: wrap;
   }
-
+  
   &.flex-nowrap {
     flex-wrap: nowrap;
   }
 
-  span {
-    visibility: hidden;
-    position: relative;
-    text-align: center;
-    text-shadow: 1px 1px 1px rgb(0, 0, 0, .5);
-
-    &.text-transform-cap:nth-child(1) {
-      text-transform: capitalize;
-    }
-
-    &.text-transform-uc {
-      text-transform: uppercase;
-    }
-
-    &.text-transform-lc {
-      text-transform: lowercase;
-    }
-
-    &.font-size-sm {
-      font-size: var.$font-size-md;
+  &.font-size-sm {
+    font-size: var.$font-size-md;
+    
+    .word .char {
       width: 1em;
       height: 1em;
     }
+  }
+  
+  &.flex-letters-start {
+    @include layout.flex-row-start;
+    
+    .word {
+      @include layout.flex-row-start;
+    }
+  }
+  
+  &.flex-letters-center {
+    @include layout.flex-row-center;
 
-    &.font-size-md {
-      font-size: var.$font-size-4xl;
+    .word {
+      @include layout.flex-row-center;
+    }
+  }
+  
+  &.flex-letters-evenly {
+    @include layout.flex-row-evenly;
+
+    .word {
+      @include layout.flex-row-evenly;
+      flex: 1;
+    }
+  }
+  
+  &.font-size-md {
+    font-size: var.$font-size-4xl;
+    
+    .word .char {
       width: 1.1em;
       height: 1.2em;
     }
+  }
 
-    &.font-size-lg {
-      font-size: var.$font-size-giant;
+  &.font-size-lg {
+    font-size: var.$font-size-giant;
+
+    .word .char {
       width: 1.5em;
       height: 1.3em;
     }
+  }
+  
+  .word {
+    font-size: inherit;
 
-    &.animation-fadeIn {
-      @include animation.animate(fadeIn, ease, forwards);
+    &.whitespace:not(:last-child) {
+      margin-right: 1em;
     }
-
-    &.animation-fadeInLeft {
-      @include animation.animate(fadeInLeft, ease, forwards);
-    }
-
-    &.animation-fadeInRight {
-      @include animation.animate(fadeInRight, ease, forwards);
+    
+    .char {
+      visibility: hidden;
+      position: relative;
+      font-size: inherit;
+      text-align: center;
+      text-shadow: 1px 1px 1px rgb(0, 0, 0, .5);
+      
+      &.text-transform-cap:nth-child(1) {
+        text-transform: capitalize;
+      }
+      
+      &.text-transform-uc {
+        text-transform: uppercase;
+      }
+  
+      &.text-transform-lc {
+        text-transform: lowercase;
+      }
+  
+      &.animation-fadeIn {
+        @include animation.animate(fadeIn, ease, forwards);
+      }
+  
+      &.animation-fadeInLeft {
+        @include animation.animate(fadeInLeft, ease, forwards);
+      }
+  
+      &.animation-fadeInRight {
+        @include animation.animate(fadeInRight, ease, forwards);
+      }
     }
   }
 }
